update samples for kdbai server

--- a/TSS_non_transformed/Temporal_Similarity_Search_KDB+.ipynb
+++ b/TSS_non_transformed/Temporal_Similarity_Search_KDB+.ipynb
@@ -109,7 +109,7 @@
    "source": [
     "## 2. Start KDB.AI Server and Define KDB.AI Session\n",
     "\n",
-    ">*Note: The kdb+ integration demonstrated in this notebook is only available with KDB.AI Server and not KDB.AI Cloud.*\n",
+    ">*Note: The kdb+ integration demonstrated in this notebook is only available with KDB.AI Server.*\n",
     "\n",
     "To use KDB.AI Server, you will need download and run your own container. To do this, you will first need to sign up for free [here](https://code.kx.com/kdbai/gettingStarted/kdb-ai-server-setup.html).\n",
     "\n",
