--- a/TSS_non_transformed/Temporal_Similarity_Search_Non-Transformed_Demo.ipynb
+++ b/TSS_non_transformed/Temporal_Similarity_Search_Non-Transformed_Demo.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Non-Transformed Temporal Similarity Search\n",
     "\n",
-    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a free [KDB.AI account](https://kdb.ai/get-started).\n",
+    "##### Note: This example requires KDB.AI server. Sign up for a free [KDB.AI account](https://kdb.ai/get-started).\n",
     "\n",
     "Non-Transformed TSS enables near real-time analysis directly upon time series windows without the overhead of extracting and embedding vectors or building a search index. \n",
     "\n",
@@ -165,89 +165,31 @@
    "metadata": {},
    "source": [
     "## 2. Define KDB.AI Session\n",
-    "KDB.AI comes in two offerings:\n",
+    "To use KDB.AI Server, you will need download and run your own container.\n",
+    "To do this, you will first need to sign up for free [here](https://trykdb.kx.com/kdbaiserver/signup/).\n",
     "\n",
-    "KDB.AI Cloud - For experimenting with smaller generative AI projects with a vector database in our cloud.\n",
-    "KDB.AI Server - For evaluating large scale generative AI applications on-premises or on your own cloud provider.\n",
-    "Depending on which you use there will be different setup steps and connection details required.\n",
+    "You will receive an email with the required license file and bearer token needed to download your instance.\n",
+    "Follow instructions in the signup email to get your session up and running.\n",
     "\n",
-    "Option 1. KDB.AI Cloud\n",
-    "To use KDB.AI Cloud, you will need two session details - a URL endpoint and an API key. To get these you can sign up for free here.\n",
-    "\n",
-    "You can connect to a KDB.AI Cloud session using kdbai.Session and passing the session URL endpoint and API key details from your KDB.AI Cloud portal.\n",
-    "\n",
-    "If the environment variables KDBAI_ENDPOINTS and KDBAI_API_KEY exist on your system containing your KDB.AI Cloud portal details, these variables will automatically be used to connect. If these do not exist, it will prompt you to enter your KDB.AI Cloud portal session URL endpoint and API key details."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3f9e2a61",
-   "metadata": {},
-   "source": [
-    "### Option 1. KDB.AI Cloud"
+    "Once the [setup steps](https://code.kx.com/kdbai/gettingStarted/kdb-ai-server-setup.html) are complete you can then connect to your KDB.AI Server session using `kdbai.Session` and passing your local endpoint.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "975421d7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set up KDB.AI endpoint and API key\n",
+    "#Set up KDB.AI server endpoint \n",
     "KDBAI_ENDPOINT = (\n",
     "    os.environ[\"KDBAI_ENDPOINT\"]\n",
     "    if \"KDBAI_ENDPOINT\" in os.environ\n",
-    "    else input(\"KDB.AI endpoint: \")\n",
+    "    else \"http://localhost:8082\"\n",
     ")\n",
-    "KDBAI_API_KEY = (\n",
-    "    os.environ[\"KDBAI_API_KEY\"]\n",
-    "    if \"KDBAI_API_KEY\" in os.environ\n",
-    "    else getpass(\"KDB.AI API key: \")\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "89c06e33",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:root:You are running a development version of `kdbai_client`.\n",
-      "Compatibility with the KDB.AI server is not guaranteed.\n"
-     ]
-    }
-   ],
-   "source": [
-    "### Start Session with KDB.AI Cloud\n",
-    "session = kdbai.Session(api_key=KDBAI_API_KEY, endpoint=KDBAI_ENDPOINT)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "114fb49b",
-   "metadata": {},
-   "source": [
-    "### Option 2. KDB.AI Server\n",
-    "To use KDB.AI Server, you will need download and run your own container. To do this, you will first need to sign up for free [here](https://code.kx.com/kdbai/gettingStarted/kdb-ai-server-setup.html).\n",
     "\n",
-    "You will receive an email with the required license file and bearer token needed to download your instance. Follow instructions in the signup email to get your session up and running.\n",
-    "\n",
-    "Once the setup steps are complete you can then connect to your KDB.AI Server session using kdbai.Session and passing your local endpoint."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "7c8a19a0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#session = kdbai.Session()"
+    "#connect to KDB.AI Server, default mode is qipc\n",
+    "session = kdbai.Session(endpoint=KDBAI_ENDPOINT)\n"
    ]
   },
   {
