--- a/document_search/document_search.ipynb
+++ b/document_search/document_search.ipynb
@@ -815,7 +815,16 @@
    },
    "outputs": [],
    "source": [
-    "session = kdbai.Session(endpoint=\"http://localhost:8082\")"
+    "#Set up KDB.AI server endpoint \n",
+    "KDBAI_ENDPOINT = (\n",
+    "    os.environ[\"KDBAI_ENDPOINT\"]\n",
+    "    if \"KDBAI_ENDPOINT\" in os.environ\n",
+    "    else \"http://localhost:8082\"\n",
+    ")\n",
+    "\n",
+    "\n",
+    "#connect to KDB.AI Server, default mode is qipc\n",
+    "session = kdbai.Session(endpoint=KDBAI_ENDPOINT)"
    ]
   },
   {
