--- a/video_RAG/video_RAG_TwelveLabs.ipynb
+++ b/video_RAG/video_RAG_TwelveLabs.ipynb
@@ -274,9 +274,17 @@
       },
       "outputs": [],
       "source": [
-        "session = Session(endpoint=\"http://localhost:8082\")\n",
-        "db = session.database(\"default\")\n",
-        "print(f\"KDB.AI Session initialized for endpoint: {os.getenv('KDBAI_ENDPOINT')}\")"
+        "#Set up KDB.AI server endpoint \n",
+        "KDBAI_ENDPOINT = (\n",
+        "    os.environ[\"KDBAI_ENDPOINT\"]\n",
+        "    if \"KDBAI_ENDPOINT\" in os.environ\n",
+        "    else \"http://localhost:8082\"\n",
+        ")\n",
+        "\n",
+        "#connect to KDB.AI Server, default mode is qipc\n",
+        "session = kdbai.Session(endpoint=KDBAI_ENDPOINT)\n",
+        "\n",
+        "db = session.database(\"default\")"
       ]
     },
     {
