--- a/LlamaIndex_advanced_RAG/KDBAI_Advanced_RAG_Demo.ipynb
+++ b/LlamaIndex_advanced_RAG/KDBAI_Advanced_RAG_Demo.ipynb
@@ -9,13 +9,11 @@
    "source": [
     "# Advanced RAG with temporal filters using LlamaIndex and KDB.AI vector store\n",
     "\n",
-    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a free [KDB.AI account](https://kdb.ai/get-started).\n",
+    "##### Note: This example requires KDB.AI server. Sign up for a free [KDB.AI account](https://kdb.ai/get-started).\n",
     "\n",
     "> [KDB.AI](https://kdb.ai/) is a powerful knowledge-based vector database and search engine that allows you to build scalable, reliable AI applications, using real-time data, by providing advanced search, recommendation and personalization.\n",
     "\n",
     "This example demonstrates how to use KDB.AI to run semantic search, summarization and analysis of financial regulations around some specific moment in time.\n",
-    "\n",
-    "To access your end point and API keys, sign up to KDB.AI here.\n",
     "\n",
     "To set up your development environment, follow the instructions on the KDB.AI pre-requisites page.\n",
     "\n",
@@ -201,15 +199,15 @@
     "id": "816fa95c"
    },
    "source": [
-    "##### Option 1. KDB.AI Cloud\n",
+    "##### KDB.AI Server\n",
     "\n",
-    "To use KDB.AI Cloud, you will need two session details - a URL endpoint and an API key.\n",
-    "To get these you can sign up for free [here](https://trykdb.kx.com/kdbai/signup).\n",
+    "To use KDB.AI Server, you will need download and run your own container.\n",
+    "To do this, you will first need to sign up for free [here](https://trykdb.kx.com/kdbaiserver/signup/).\n",
     "\n",
-    "You can connect to a KDB.AI Cloud session using `kdbai.Session` and passing the session URL endpoint and API key details from your KDB.AI Cloud portal.\n",
+    "You will receive an email with the required license file and bearer token needed to download your instance.\n",
+    "Follow instructions in the signup email to get your session up and running.\n",
     "\n",
-    "If the environment variables `KDBAI_ENDPOINTS` and `KDBAI_API_KEY` exist on your system containing your KDB.AI Cloud portal details, these variables will automatically be used to connect.\n",
-    "If these do not exist, it will prompt you to enter your KDB.AI Cloud portal session URL endpoint and API key details."
+    "Once the [setup steps](https://code.kx.com/kdbai/gettingStarted/kdb-ai-server-setup.html) are complete you can then connect to your KDB.AI Server session using `kdbai.Session` and passing your local endpoint.\n"
    ]
   },
   {
@@ -221,49 +219,15 @@
    },
    "outputs": [],
    "source": [
-    "#Set up KDB.AI endpoint and API key\n",
+    "#Set up KDB.AI server endpoint \n",
     "KDBAI_ENDPOINT = (\n",
     "    os.environ[\"KDBAI_ENDPOINT\"]\n",
     "    if \"KDBAI_ENDPOINT\" in os.environ\n",
-    "    else input(\"KDB.AI endpoint: \")\n",
-    ")\n",
-    "KDBAI_API_KEY = (\n",
-    "    os.environ[\"KDBAI_API_KEY\"]\n",
-    "    if \"KDBAI_API_KEY\" in os.environ\n",
-    "    else getpass(\"KDB.AI API key: \")\n",
+    "    else \"http://localhost:8082\"\n",
     ")\n",
     "\n",
-    "session = kdbai.Session(endpoint=KDBAI_ENDPOINT, api_key=KDBAI_API_KEY)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bf750140",
-   "metadata": {
-    "id": "bf750140"
-   },
-   "source": [
-    "##### Option 2. KDB.AI Server\n",
-    "\n",
-    "To use KDB.AI Server, you will need download and run your own container.\n",
-    "To do this, you will first need to sign up for free [here](https://trykdb.kx.com/kdbaiserver/signup/).\n",
-    "\n",
-    "You will receive an email with the required license file and bearer token needed to download your instance.\n",
-    "Follow instructions in the signup email to get your session up and running.\n",
-    "\n",
-    "Once the [setup steps](https://code.kx.com/kdbai/gettingStarted/kdb-ai-server-setup.html) are complete you can then connect to your KDB.AI Server session using `kdbai.Session` and passing your local endpoint."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "id": "77e9b64c",
-   "metadata": {
-    "id": "77e9b64c"
-   },
-   "outputs": [],
-   "source": [
-    "#session = kdbai.Session()"
+    "#connect to KDB.AI Server, default mode is qipc\n",
+    "session = kdbai.Session(endpoint=KDBAI_ENDPOINT)\n"
    ]
   },
   {
