--- a/LlamaIndex_samples/Hybrid_Search_LlamaIndex_KDBAI.ipynb
+++ b/LlamaIndex_samples/Hybrid_Search_LlamaIndex_KDBAI.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "# Hybrid Search with LlamaIndex & KDB.AI\n",
     "\n",
-    "Note: This example requires a KDB.AI endpoint and API key. Sign up for a free [KDB.AI account](https://kdb.ai/offerings/).\n",
+    "Note: This example requires KDB.AI server. Sign up for a free [KDB.AI account](https://kdb.ai/offerings/).\n",
     "\n",
     "KDB.AI hybrid search is a method of similarity search to increase the relevancy of results retrieved from the vector database. It combines two search methods: sparse vector search, and dense vector search.\n",
     "\n",
@@ -212,7 +212,7 @@
     "id": "720a9744-a9d4-4691-9077-229e1c526522"
    },
    "source": [
-    "## KDB.ai Vector Database - session and tables"
+    "## KDB.AI Vector Database - session and tables"
    ]
   },
   {
@@ -247,26 +247,13 @@
    "source": [
     "**KDB.AI session**\n",
     "\n",
-    "With the embeddings created, we need to store them in a vector database to enable efficient searching.\n",
+    "To use KDB.AI Server, you will need download and run your own container.\n",
+    "To do this, you will first need to sign up for free [here](https://trykdb.kx.com/kdbaiserver/signup/).\n",
     "\n",
-    "### Define KDB.AI Session\n",
+    "You will receive an email with the required license file and bearer token needed to download your instance.\n",
+    "Follow instructions in the signup email to get your session up and running.\n",
     "\n",
-    "KDB.AI comes in two offerings:\n",
-    "\n",
-    "1. [KDB.AI Cloud](https://trykdb.kx.com/kdbai/signup/) - For experimenting with smaller generative AI projects with a vector database in our cloud.\n",
-    "2. [KDB.AI Server](https://trykdb.kx.com/kdbaiserver/signup/) - For evaluating large scale generative AI applications on-premises or on your own cloud provider.\n",
-    "\n",
-    "Depending on which you use there will be different setup steps and connection details required.\n",
-    "\n",
-    "##### Option 1. KDB.AI Cloud\n",
-    "\n",
-    "To use KDB.AI Cloud, you will need two session details - a URL endpoint and an API key.\n",
-    "To get these you can sign up for free [here](https://trykdb.kx.com/kdbai/signup).\n",
-    "\n",
-    "You can connect to a KDB.AI Cloud session using `kdbai.Session` and passing the session URL endpoint and API key details from your KDB.AI Cloud portal.\n",
-    "\n",
-    "If the environment variables `KDBAI_ENDPOINTS` and `KDBAI_API_KEY` exist on your system containing your KDB.AI Cloud portal details, these variables will automatically be used to connect.\n",
-    "If these do not exist, it will prompt you to enter your KDB.AI Cloud portal session URL endpoint and API key details."
+    "Once the [setup steps](https://code.kx.com/kdbai/gettingStarted/kdb-ai-server-setup.html) are complete you can then connect to your KDB.AI Server session using `kdbai.Session` and passing your local endpoint.\n"
    ]
   },
   {
@@ -278,48 +265,15 @@
    },
    "outputs": [],
    "source": [
+    "#Set up KDB.AI server endpoint \n",
     "KDBAI_ENDPOINT = (\n",
     "    os.environ[\"KDBAI_ENDPOINT\"]\n",
     "    if \"KDBAI_ENDPOINT\" in os.environ\n",
-    "    else input(\"KDB.AI endpoint: \")\n",
-    ")\n",
-    "KDBAI_API_KEY = (\n",
-    "    os.environ[\"KDBAI_API_KEY\"]\n",
-    "    if \"KDBAI_API_KEY\" in os.environ\n",
-    "    else getpass(\"KDB.AI API key: \")\n",
+    "    else \"http://localhost:8082\"\n",
     ")\n",
     "\n",
-    "session = kdbai.Session(api_key=KDBAI_API_KEY, endpoint=KDBAI_ENDPOINT)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "W885kIuMjOpl",
-   "metadata": {
-    "id": "W885kIuMjOpl"
-   },
-   "source": [
-    "##### Option 2. KDB.AI Server\n",
-    "\n",
-    "To use KDB.AI Server, you will need download and run your own container.\n",
-    "To do this, you will first need to sign up for free [here](https://trykdb.kx.com/kdbaiserver/signup/).\n",
-    "\n",
-    "You willreceive an email with the required license file and bearer  token needed to download your instance.\n",
-    "Follow instructions in the signup email to get your session up and running.\n",
-    "\n",
-    "Once the [setup steps](https://code.kx.com/kdbai/gettingStarted/kdb-ai-server-setup.html) are complete you can then connect to your KDB.AI Server session using `kdbai.Session` and passing your local endpoint."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "940990b1-32b7-4ba4-8c8c-fc6c0ca0a372",
-   "metadata": {
-    "id": "940990b1-32b7-4ba4-8c8c-fc6c0ca0a372"
-   },
-   "outputs": [],
-   "source": [
-    "# session = kdbai.Session(endpoint=\"http://localhost:8082\")"
+    "#connect to KDB.AI Server, default mode is qipc\n",
+    "session = kdbai.Session(endpoint=KDBAI_ENDPOINT)\n"
    ]
   },
   {
