--- a/LlamaIndex_samples/Multimodal_RAG_LLamaIndex_CLIP_KDBAI.ipynb
+++ b/LlamaIndex_samples/Multimodal_RAG_LLamaIndex_CLIP_KDBAI.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "# Multimodal RAG using LlamaIndex, CLIP, & KDB.AI\n",
     "\n",
-    "Note: This example requires a KDB.AI endpoint and API key. Sign up for a free [KDB.AI account](https://kdb.ai/offerings/).\n",
+    "Note: This example requires KDB.AI server. Sign up for a free [KDB.AI account](https://kdb.ai/offerings/).\n",
     "\n",
     "This example explores preparing, embedding (with CLIP), and storing both text and image data within a KDB.AI vector database using LlamaIndex."
    ]
@@ -534,7 +534,7 @@
     "id": "53ea1fc4-611f-43f4-8d56-e894c22c1b1b"
    },
    "source": [
-    "## KDB.ai session and tables"
+    "## KDB.AI session and tables"
    ]
   },
   {
@@ -581,75 +581,33 @@
     "\n",
     "### Define KDB.AI Session\n",
     "\n",
-    "KDB.AI comes in two offerings:\n",
+    "To use KDB.AI Server, you will need download and run your own container.\n",
+    "To do this, you will first need to sign up for free [here](https://trykdb.kx.com/kdbaiserver/signup/).\n",
     "\n",
-    "1. [KDB.AI Cloud](https://trykdb.kx.com/kdbai/signup/) - For experimenting with smaller generative AI projects with a vector database in our cloud.\n",
-    "2. [KDB.AI Server](https://trykdb.kx.com/kdbaiserver/signup/) - For evaluating large scale generative AI applications on-premises or on your own cloud provider.\n",
+    "You will receive an email with the required license file and bearer token needed to download your instance.\n",
+    "Follow instructions in the signup email to get your session up and running.\n",
     "\n",
-    "Depending on which you use there will be different setup steps and connection details required.\n",
-    "\n",
-    "##### Option 1. KDB.AI Cloud\n",
-    "\n",
-    "To use KDB.AI Cloud, you will need two session details - a URL endpoint and an API key.\n",
-    "To get these you can sign up for free [here](https://trykdb.kx.com/kdbai/signup).\n",
-    "\n",
-    "You can connect to a KDB.AI Cloud session using `kdbai.Session` and passing the session URL endpoint and API key details from your KDB.AI Cloud portal.\n",
-    "\n",
-    "If the environment variables `KDBAI_ENDPOINTS` and `KDBAI_API_KEY` exist on your system containing your KDB.AI Cloud portal details, these variables will automatically be used to connect.\n",
-    "If these do not exist, it will prompt you to enter your KDB.AI Cloud portal session URL endpoint and API key details."
+    "Once the [setup steps](https://code.kx.com/kdbai/gettingStarted/kdb-ai-server-setup.html) are complete you can then connect to your KDB.AI Server session using `kdbai.Session` and passing your local endpoint.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "ZNfk_x1i3iVs",
    "metadata": {
     "id": "ZNfk_x1i3iVs"
    },
    "outputs": [],
    "source": [
+    "#Set up KDB.AI server endpoint \n",
     "KDBAI_ENDPOINT = (\n",
     "    os.environ[\"KDBAI_ENDPOINT\"]\n",
     "    if \"KDBAI_ENDPOINT\" in os.environ\n",
-    "    else input(\"KDB.AI endpoint: \")\n",
-    ")\n",
-    "KDBAI_API_KEY = (\n",
-    "    os.environ[\"KDBAI_API_KEY\"]\n",
-    "    if \"KDBAI_API_KEY\" in os.environ\n",
-    "    else getpass(\"KDB.AI API key: \")\n",
+    "    else \"http://localhost:8082\"\n",
     ")\n",
     "\n",
-    "session = kdbai.Session(api_key=KDBAI_API_KEY, endpoint=KDBAI_ENDPOINT)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ddJvMup83pyA",
-   "metadata": {
-    "id": "ddJvMup83pyA"
-   },
-   "source": [
-    "##### Option 2. KDB.AI Server\n",
-    "\n",
-    "To use KDB.AI Server, you will need download and run your own container.\n",
-    "To do this, you will first need to sign up for free [here](https://trykdb.kx.com/kdbaiserver/signup/).\n",
-    "\n",
-    "You willreceive an email with the required license file and bearer  token needed to download your instance.\n",
-    "Follow instructions in the signup email to get your session up and running.\n",
-    "\n",
-    "Once the [setup steps](https://code.kx.com/kdbai/gettingStarted/kdb-ai-server-setup.html) are complete you can then connect to your KDB.AI Server session using `kdbai.Session` and passing your local endpoint."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f2e55908-ab86-4725-937a-1a66dde06644",
-   "metadata": {
-    "id": "f2e55908-ab86-4725-937a-1a66dde06644"
-   },
-   "outputs": [],
-   "source": [
-    "# session = kdbai.Session(endpoint=\"http://localhost:8082\")"
+    "#connect to KDB.AI Server, default mode is qipc\n",
+    "session = kdbai.Session(endpoint=KDBAI_ENDPOINT)\n"
    ]
   },
   {
