--- a/TSS_non_transformed/Non_Transformed_TSS_Technical_Analysis.ipynb
+++ b/TSS_non_transformed/Non_Transformed_TSS_Technical_Analysis.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# Non-Transformed Temporal Similarity Search For Technical Analysis\n",
     "\n",
-    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a free [KDB.AI account](https://kdb.ai/get-started).\n",
+    "##### Note: This example requires KDB.AI server. Sign up for a free [KDB.AI account](https://kdb.ai/get-started).\n",
     "\n",
     "This notebook demonstrates how to use KDB.AI's Non-Transformed Temporal Similarity Search (TSS) for pattern matching and technical analysis in synthetic market data. We'll generate synthetic time series data, insert it into a KDB.AI table, and then perform similarity searches to identify specific patterns.\n",
     "\n",
@@ -200,59 +200,32 @@
    },
    "source": [
     "## 3. Define KDB.AI Session\n",
-    "KDB.AI comes in two offerings:\n",
+    "To use KDB.AI Server, you will need download and run your own container.\n",
+    "To do this, you will first need to sign up for free [here](https://trykdb.kx.com/kdbaiserver/signup/).\n",
     "\n",
-    "KDB.AI Cloud - For experimenting with smaller generative AI projects with a vector database in our cloud.\n",
-    "KDB.AI Server - For evaluating large scale generative AI applications on-premises or on your own cloud provider.\n",
-    "Depending on which you use there will be different setup steps and connection details required.\n",
+    "You will receive an email with the required license file and bearer token needed to download your instance.\n",
+    "Follow instructions in the signup email to get your session up and running.\n",
     "\n",
-    "In this notebook, we will be using KDB.AI Cloud.\n",
-    "To use KDB.AI Cloud, you will need two session details - a URL endpoint and an API key. To get these you can sign up for free here.\n",
-    "\n",
-    "You can connect to a KDB.AI Cloud session using kdbai.Session and passing the session URL endpoint and API key details from your KDB.AI Cloud portal.\n",
-    "\n",
-    "If the environment variables KDBAI_ENDPOINTS and KDBAI_API_KEY exist on your system containing your KDB.AI Cloud portal details, these variables will automatically be used to connect. If these do not exist, it will prompt you to enter your KDB.AI Cloud portal session URL endpoint and API key details."
+    "Once the [setup steps](https://code.kx.com/kdbai/gettingStarted/kdb-ai-server-setup.html) are complete you can then connect to your KDB.AI Server session using `kdbai.Session` and passing your local endpoint.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "id": "o9CFRr7nlvAr"
    },
    "outputs": [],
    "source": [
-    "# Set up KDB.AI endpoint and API key\n",
+    "#Set up KDB.AI server endpoint \n",
     "KDBAI_ENDPOINT = (\n",
     "    os.environ[\"KDBAI_ENDPOINT\"]\n",
     "    if \"KDBAI_ENDPOINT\" in os.environ\n",
-    "    else input(\"KDB.AI endpoint: \")\n",
+    "    else \"http://localhost:8082\"\n",
     ")\n",
-    "KDBAI_API_KEY = (\n",
-    "    os.environ[\"KDBAI_API_KEY\"]\n",
-    "    if \"KDBAI_API_KEY\" in os.environ\n",
-    "    else getpass(\"KDB.AI API key: \")\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "id": "MORrZ9DRl2pX"
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:root:You are running a development version of `kdbai_client`.\n",
-      "Compatibility with the KDB.AI server is not guaranteed.\n"
-     ]
-    }
-   ],
-   "source": [
-    "session = kdbai.Session(api_key=KDBAI_API_KEY, endpoint=KDBAI_ENDPOINT)"
+    "\n",
+    "#connect to KDB.AI Server, default mode is qipc\n",
+    "session = kdbai.Session(endpoint=KDBAI_ENDPOINT)\n"
    ]
   },
   {
