--- a/TSS_transformed/Transformed_TSS_pattern_matching.ipynb
+++ b/TSS_transformed/Transformed_TSS_pattern_matching.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "</div>\n",
     "\n",
-    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a free [KDB.AI account](https://kdb.ai/get-started).\n",
+    "##### Note: This example requires KDB.AI server. Sign up for a free [KDB.AI account](https://kdb.ai/get-started).\n",
     "\n",
     "This example explores the process of conducting pattern matching on time series manufacturing data using *Transformed Temporal Similarity Search* in KDB.AI.\n",
     "\n",
@@ -33,10 +33,10 @@
     "This tutorial will walk through the process of storing time series data in a vector database, generating time series vector embeddings. We will use KDB.AI's vector database to find patterns that match an input query pattern. We will cover the following topics:\n",
     "\n",
     "1. Load Sensor Data\n",
-    "1. Create Sensor Vector Embeddings\n",
-    "1. Store Embeddings in KDB.AI\n",
-    "1. Search For Similar Sequences To A Target Sensor Sequence\n",
-    "1. Delete the KDB.AI Table\n",
+    "2. Create Sensor Vector Embeddings\n",
+    "3. Store Embeddings in KDB.AI\n",
+    "4. Search For Similar Sequences To A Target Sensor Sequence\n",
+    "5. Delete the KDB.AI Table\n",
     "\n",
     "---"
    ]
@@ -687,86 +687,33 @@
     "With the embeddings created, we need to store them in a vector database to enable efficient searching.\n",
     "\n",
     "### Define KDB.AI Session\n",
-    "\n",
-    "KDB.AI comes in two offerings:\n",
-    "\n",
-    "1. [KDB.AI Cloud](https://trykdb.kx.com/kdbai/signup/) - For experimenting with smaller generative AI projects with a vector database in our cloud.\n",
-    "2. [KDB.AI Server](https://trykdb.kx.com/kdbaiserver/signup/) - For evaluating large scale generative AI applications on-premises or on your own cloud provider.\n",
-    "\n",
-    "Depending on which you use there will be different setup steps and connection details required.\n",
-    "\n",
-    "##### Option 1. KDB.AI Cloud\n",
-    "\n",
-    "To use KDB.AI Cloud, you will need two session details - a URL endpoint and an API key.\n",
-    "To get these you can sign up for free [here](https://trykdb.kx.com/kdbai/signup).\n",
-    "\n",
-    "You can connect to a KDB.AI Cloud session using `kdbai.Session` and passing the session URL endpoint and API key details from your KDB.AI Cloud portal.\n",
-    "\n",
-    "If the environment variables `KDBAI_ENDPOINTS` and `KDBAI_API_KEY` exist on your system containing your KDB.AI Cloud portal details, these variables will automatically be used to connect.\n",
-    "If these do not exist, it will prompt you to enter your KDB.AI Cloud portal session URL endpoint and API key details."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "c4a372cd",
-   "metadata": {
-    "id": "c4a372cd"
-   },
-   "outputs": [],
-   "source": [
-    "KDBAI_ENDPOINT = (\n",
-    "    os.environ[\"KDBAI_ENDPOINT\"]\n",
-    "    if \"KDBAI_ENDPOINT\" in os.environ\n",
-    "    else input(\"KDB.AI endpoint: \")\n",
-    ")\n",
-    "KDBAI_API_KEY = (\n",
-    "    os.environ[\"KDBAI_API_KEY\"]\n",
-    "    if \"KDBAI_API_KEY\" in os.environ\n",
-    "    else getpass(\"KDB.AI API key: \")\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "748f33c4",
-   "metadata": {
-    "id": "748f33c4"
-   },
-   "outputs": [],
-   "source": [
-    "session = kdbai.Session(api_key=KDBAI_API_KEY, endpoint=KDBAI_ENDPOINT)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "773ecda1",
-   "metadata": {
-    "id": "773ecda1"
-   },
-   "source": [
-    "##### Option 2. KDB.AI Server\n",
-    "\n",
     "To use KDB.AI Server, you will need download and run your own container.\n",
     "To do this, you will first need to sign up for free [here](https://trykdb.kx.com/kdbaiserver/signup/).\n",
     "\n",
     "You will receive an email with the required license file and bearer token needed to download your instance.\n",
     "Follow instructions in the signup email to get your session up and running.\n",
     "\n",
-    "Once the [setup steps](https://code.kx.com/kdbai/gettingStarted/kdb-ai-server-setup.html) are complete you can then connect to your KDB.AI Server session using `kdbai.Session` and passing your local endpoint."
+    "Once the [setup steps](https://code.kx.com/kdbai/gettingStarted/kdb-ai-server-setup.html) are complete you can then connect to your KDB.AI Server session using `kdbai.Session` and passing your local endpoint.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "20441109",
+   "execution_count": null,
+   "id": "c4a372cd",
    "metadata": {
-    "id": "20441109"
+    "id": "c4a372cd"
    },
    "outputs": [],
    "source": [
-    "# session = kdbai.Session(endpoint=\"http://localhost:8082\")"
+    "#Set up KDB.AI server endpoint \n",
+    "KDBAI_ENDPOINT = (\n",
+    "    os.environ[\"KDBAI_ENDPOINT\"]\n",
+    "    if \"KDBAI_ENDPOINT\" in os.environ\n",
+    "    else \"http://localhost:8082\"\n",
+    ")\n",
+    "\n",
+    "#connect to KDB.AI Server, default mode is qipc\n",
+    "session = kdbai.Session(endpoint=KDBAI_ENDPOINT)\n"
    ]
   },
   {
