--- a/fuzzy_filtering_on_metadata/fuzzy_filtering_demo.ipynb
+++ b/fuzzy_filtering_on_metadata/fuzzy_filtering_demo.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# Fuzzy Filtering on Metadata with KDB.AI Vector Database\n",
     "\n",
-    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a free [KDB.AI account](https://kdb.ai/get-started).\n",
+    "##### Note: This example requires a KDB.AI server. Sign up for a free [KDB.AI account](https://kdb.ai/get-started).\n",
     "\n",
     "#### In this example, we will show how to use metadata filtering along with fuzzy filtering in a KDB.AI vector database to increase the speed and accuracy of vector similarity searches.\n",
     "\n",
@@ -364,35 +364,15 @@
    },
    "outputs": [],
    "source": [
-    "session = kdbai.Session(endpoint=\"http://localhost:8082\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "WeHjUwHCXyhf"
-   },
-   "source": [
-    "##### Option 2. KDB.AI Server\n",
+    "#Set up KDB.AI server endpoint \n",
+    "KDBAI_ENDPOINT = (\n",
+    "    os.environ[\"KDBAI_ENDPOINT\"]\n",
+    "    if \"KDBAI_ENDPOINT\" in os.environ\n",
+    "    else \"http://localhost:8082\"\n",
+    ")\n",
     "\n",
-    "To use KDB.AI Server, you will need download and run your own container.\n",
-    "To do this, you will first need to sign up for free [here](https://trykdb.kx.com/kdbaiserver/signup/).\n",
-    "\n",
-    "You will receive an email with the required license file and bearer token needed to download your instance.\n",
-    "Follow instructions in the signup email to get your session up and running.\n",
-    "\n",
-    "Once the [setup steps](https://code.kx.com/kdbai/gettingStarted/kdb-ai-server-setup.html) are complete you can then connect to your KDB.AI Server session using `kdbai.Session` and passing your local endpoint."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "id": "nRRR7lvfXyhf"
-   },
-   "outputs": [],
-   "source": [
-    "# session = kdbai.Session()"
+    "#connect to KDB.AI Server, default mode is qipc\n",
+    "session = kdbai.Session(endpoint=KDBAI_ENDPOINT)\n"
    ]
   },
   {
