--- a/metadata_filtering/metadata_filtering_demo.ipynb
+++ b/metadata_filtering/metadata_filtering_demo.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Metadata Filtering with KDB.AI Vector Database\n",
     "\n",
-    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a free [KDB.AI account](https://kdb.ai/get-started).\n",
+    "##### Note: This example requires KDB.AI server. Sign up for a free [KDB.AI account](https://kdb.ai/get-started).\n",
     "\n",
     "#### In this example, we will show how to use metadata filtering in a KDB.AI vector database to increase the speed and accuracy of vector similarity searches.\n",
     "\n",
@@ -25,7 +25,7 @@
    "metadata": {},
    "source": [
     "## 1. Set Up\n",
-    "#### Installs, imports, and API Key setup\n",
+    "#### Installs and imports\n",
     "\n",
     "In order to successfully run this sample, note the following steps depending on where you are running this notebook:\n",
     "\n",
@@ -301,67 +301,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Option 1. KDB.AI Cloud\n",
-    "\n",
-    "To use KDB.AI Cloud, you will need two session details - a URL endpoint and an API key.\n",
-    "To get these you can sign up for free [here](https://trykdb.kx.com/kdbai/signup).\n",
-    "\n",
-    "You can connect to a KDB.AI Cloud session using `kdbai.Session` and passing the session URL endpoint and API key details from your KDB.AI Cloud portal.\n",
-    "\n",
-    "If the environment variables `KDBAI_ENDPOINTS` and `KDBAI_API_KEY` exist on your system containing your KDB.AI Cloud portal details, these variables will automatically be used to connect.\n",
-    "If these do not exist, it will prompt you to enter your KDB.AI Cloud portal session URL endpoint and API key details."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Set up KDB.AI endpoint and API key\n",
-    "KDBAI_ENDPOINT = (\n",
-    "    os.environ[\"KDBAI_ENDPOINT\"]\n",
-    "    if \"KDBAI_ENDPOINT\" in os.environ\n",
-    "    else input(\"KDB.AI endpoint: \")\n",
-    ")\n",
-    "KDBAI_API_KEY = (\n",
-    "    os.environ[\"KDBAI_API_KEY\"]\n",
-    "    if \"KDBAI_API_KEY\" in os.environ\n",
-    "    else getpass(\"KDB.AI API key: \")\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "session = kdbai.Session(api_key=KDBAI_API_KEY, endpoint=KDBAI_ENDPOINT)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Option 2. KDB.AI Server\n",
-    "\n",
     "To use KDB.AI Server, you will need download and run your own container.\n",
-    "To do this, you will first need to sign up for free [here](https://trykdb.kx.com/kdbaiserver/signup/). \n",
+    "To do this, you will first need to sign up for free [here](https://trykdb.kx.com/kdbaiserver/signup/).\n",
     "\n",
     "You will receive an email with the required license file and bearer token needed to download your instance.\n",
     "Follow instructions in the signup email to get your session up and running.\n",
     "\n",
-    "Once the [setup steps](https://code.kx.com/kdbai/gettingStarted/kdb-ai-server-setup.html) are complete you can then connect to your KDB.AI Server session using `kdbai.Session` and passing your local endpoint."
+    "Once the [setup steps](https://code.kx.com/kdbai/gettingStarted/kdb-ai-server-setup.html) are complete you can then connect to your KDB.AI Server session using `kdbai.Session` and passing your local endpoint.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#session = kdbai.Session(endpoint=KDBAI_ENDPOINT)"
+    "#Set up KDB.AI server endpoint \n",
+    "KDBAI_ENDPOINT = (\n",
+    "    os.environ[\"KDBAI_ENDPOINT\"]\n",
+    "    if \"KDBAI_ENDPOINT\" in os.environ\n",
+    "    else \"http://localhost:8082\"\n",
+    ")\n",
+    "\n",
+    "#connect to KDB.AI Server, default mode is qipc\n",
+    "session = kdbai.Session(endpoint=KDBAI_ENDPOINT)\n"
    ]
   },
   {
