--- a/multi_index_multimodal_search/multi_index_multimodal_search.ipynb
+++ b/multi_index_multimodal_search/multi_index_multimodal_search.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "## Multi-Index Search\n",
     "\n",
-    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a free [KDB.AI account](https://kdb.ai/get-started).\n",
+    "##### Note: This example requires KDB.AI server. Sign up for a free [KDB.AI account](https://kdb.ai/get-started).\n",
     "\n",
     "KDB.AI enables multiple indexes to be defined within a table. The indexes can be queried and searched independently, or simultaneously. When doing multi-index search, the user defines a 'weight' parameter to determine the weight of each index for that search.\n",
     "\n",
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "id": "QuGvCEg-gUaS"
    },
@@ -87,7 +87,8 @@
    "source": [
     "import clip\n",
     "import torch\n",
-    "import kdbai_client as kdbai"
+    "import kdbai_client as kdbai\n",
+    "from getpass import getpass"
    ]
   },
   {
@@ -289,22 +290,13 @@
    "source": [
     "## 3. Define KDB.AI Session\n",
     "\n",
-    "KDB.AI comes in two offerings:\n",
+    "To use KDB.AI Server, you will need download and run your own container.\n",
+    "To do this, you will first need to sign up for free [here](https://trykdb.kx.com/kdbaiserver/signup/).\n",
     "\n",
-    "1. [KDB.AI Cloud](https://trykdb.kx.com/kdbai/signup/) - For experimenting with smaller generative AI projects with a vector database in our cloud.\n",
-    "2. [KDB.AI Server](https://trykdb.kx.com/kdbaiserver/signup/) - For evaluating large scale generative AI applications on-premises or on your own cloud provider.\n",
+    "You will receive an email with the required license file and bearer token needed to download your instance.\n",
+    "Follow instructions in the signup email to get your session up and running.\n",
     "\n",
-    "Depending on which you use there will be different setup steps and connection details required.\n",
-    "\n",
-    "##### Option 1. KDB.AI Cloud\n",
-    "\n",
-    "To use KDB.AI Cloud, you will need two session details - a URL endpoint and an API key.\n",
-    "To get these you can sign up for free [here](https://trykdb.kx.com/kdbai/signup).\n",
-    "\n",
-    "You can connect to a KDB.AI Cloud session using `kdbai.Session` and passing the session URL endpoint and API key details from your KDB.AI Cloud portal.\n",
-    "\n",
-    "If the environment variables `KDBAI_ENDPOINTS` and `KDBAI_API_KEY` exist on your system containing your KDB.AI Cloud portal details, these variables will automatically be used to connect.\n",
-    "If these do not exist, it will prompt you to enter your KDB.AI Cloud portal session URL endpoint and API key details."
+    "Once the [setup steps](https://code.kx.com/kdbai/gettingStarted/kdb-ai-server-setup.html) are complete you can then connect to your KDB.AI Server session using `kdbai.Session` and passing your local endpoint.\n"
    ]
   },
   {
@@ -315,48 +307,17 @@
    },
    "outputs": [],
    "source": [
-    "from getpass import getpass\n",
     "\n",
+    "\n",
+    "#Set up KDB.AI server endpoint \n",
     "KDBAI_ENDPOINT = (\n",
     "    os.environ[\"KDBAI_ENDPOINT\"]\n",
     "    if \"KDBAI_ENDPOINT\" in os.environ\n",
-    "    else input(\"KDB.AI endpoint: \")\n",
-    ")\n",
-    "KDBAI_API_KEY = (\n",
-    "    os.environ[\"KDBAI_API_KEY\"]\n",
-    "    if \"KDBAI_API_KEY\" in os.environ\n",
-    "    else getpass(\"KDB.AI API key: \")\n",
+    "    else \"http://localhost:8082\"\n",
     ")\n",
     "\n",
-    "session = kdbai.Session(api_key=KDBAI_API_KEY, endpoint=KDBAI_ENDPOINT)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "8DPghYoCe-R7"
-   },
-   "source": [
-    "##### Option 2. KDB.AI Server\n",
-    "\n",
-    "To use KDB.AI Server, you will need download and run your own container.\n",
-    "To do this, you will first need to sign up for free [here](https://trykdb.kx.com/kdbaiserver/signup/).\n",
-    "\n",
-    "You will receive an email with the required license file and bearer token needed to download your instance.\n",
-    "Follow instructions in the signup email to get your session up and running.\n",
-    "\n",
-    "Once the [setup steps](https://code.kx.com/kdbai/gettingStarted/kdb-ai-server-setup.html) are complete you can then connect to your KDB.AI Server session using `kdbai.Session` and passing your local endpoint."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "GTC92KE1fACl"
-   },
-   "outputs": [],
-   "source": [
-    "# session = kdbai.Session(endpoint=\"http://localhost:8082\")"
+    "#connect to KDB.AI Server, default mode is qipc\n",
+    "session = kdbai.Session(endpoint=KDBAI_ENDPOINT)\n"
    ]
   },
   {
