--- a/multimodal_RAG_unified_text/multi_modal_demo.ipynb
+++ b/multimodal_RAG_unified_text/multi_modal_demo.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Multimodal Retrieval Augmented Generation (RAG)\n",
     "\n",
-    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a free [KDB.AI account](https://kdb.ai/get-started).\n",
+    "##### Note: This example requires KDB.AI server. Sign up for a free [KDB.AI account](https://kdb.ai/get-started).\n",
     "\n",
     "This example explores preparing, embedding, and storing both text and image data within a KDB.AI vector database. Our goal is to store both images descriptions and text within the same vector space so we can search over both modalities at the same time. KDB.AI can then be used as a retrieval tool within a RAG pipeline for both text and images data, making it a multimodal retriever. \n",
     "\n",
@@ -673,7 +673,15 @@
    "metadata": {},
    "source": [
     "## 4. Set Up KDB.AI Vector Database table\n",
-    "Time to get KDB.AI vector database set up. If you do not have an account, go to KDB.AI to sign-up free!"
+    "Time to get KDB.AI vector database set up. If you do not have an account, go to KDB.AI to sign-up free!\n",
+    "\n",
+    "To use KDB.AI Server, you will need download and run your own container.\n",
+    "To do this, you will first need to sign up for free [here](https://trykdb.kx.com/kdbaiserver/signup/).\n",
+    "\n",
+    "You will receive an email with the required license file and bearer token needed to download your instance.\n",
+    "Follow instructions in the signup email to get your session up and running.\n",
+    "\n",
+    "Once the [setup steps](https://code.kx.com/kdbai/gettingStarted/kdb-ai-server-setup.html) are complete you can then connect to your KDB.AI Server session using `kdbai.Session` and passing your local endpoint.\n"
    ]
   },
   {
@@ -691,31 +699,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Set up KDB.AI endpoint and API key\n",
-    "KDBAI_ENDPOINT = (\n",
-    "    os.environ[\"KDBAI_ENDPOINT\"]\n",
-    "    if \"KDBAI_ENDPOINT\" in os.environ\n",
-    "    else input(\"KDB.AI endpoint: \")\n",
-    ")\n",
-    "KDBAI_API_KEY = (\n",
-    "    os.environ[\"KDBAI_API_KEY\"]\n",
-    "    if \"KDBAI_API_KEY\" in os.environ\n",
-    "    else getpass(\"KDB.AI API key: \")\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Connect to KDB.AI\n",
-    "session = kdbai.Session(api_key=KDBAI_API_KEY, endpoint=KDBAI_ENDPOINT)"
+    "#Set up KDB.AI server endpoint \n",
+    "KDBAI_ENDPOINT = (\n",
+    "    os.environ[\"KDBAI_ENDPOINT\"]\n",
+    "    if \"KDBAI_ENDPOINT\" in os.environ\n",
+    "    else \"http://localhost:8082\"\n",
+    ")\n",
+    "\n",
+    "#connect to KDB.AI Server, default mode is qipc\n",
+    "session = kdbai.Session(endpoint=KDBAI_ENDPOINT)"
    ]
   },
   {
