--- a/unstructured_io_RAG/Table_RAG_Unstructured_KDBAI_LangChain_RAG.ipynb
+++ b/unstructured_io_RAG/Table_RAG_Unstructured_KDBAI_LangChain_RAG.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "# RAG with Unstructured, LangChain, & KDB.AI\n",
-    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a free [KDB.AI account](https://kdb.ai/get-started).\n",
+    "##### Note: This example requires KDB.AI server. Sign up for a free [KDB.AI account](https://kdb.ai/get-started).\n",
     "\n",
     "> [KDB.AI](https://kdb.ai/) is a powerful knowledge-based vector database and search engine that allows you to build scalable, reliable AI applications, using real-time data, by providing advanced search, recommendation and personalization.\n",
     "\n",
@@ -1253,94 +1253,32 @@
    },
    "source": [
     "# 4. Define KDB.AI Session\n",
-    "KDB.AI comes in two offerings:\n",
+    "To use KDB.AI Server, you will need download and run your own container.\n",
+    "To do this, you will first need to sign up for free [here](https://trykdb.kx.com/kdbaiserver/signup/).\n",
     "\n",
-    "KDB.AI Cloud - For experimenting with smaller generative AI projects with a vector database in our cloud.\n",
-    "KDB.AI Server - For evaluating large scale generative AI applications on-premises or on your own cloud provider.\n",
-    "Depending on which you use there will be different setup steps and connection details required.\n",
+    "You will receive an email with the required license file and bearer token needed to download your instance.\n",
+    "Follow instructions in the signup email to get your session up and running.\n",
     "\n",
-    "Option 1. KDB.AI Cloud\n",
-    "To use KDB.AI Cloud, you will need two session details - a URL endpoint and an API key. To get these you can sign up for free here.\n",
-    "\n",
-    "You can connect to a KDB.AI Cloud session using kdbai.Session and passing the session URL endpoint and API key details from your KDB.AI Cloud portal.\n",
-    "\n",
-    "If the environment variables KDBAI_ENDPOINTS and KDBAI_API_KEY exist on your system containing your KDB.AI Cloud portal details, these variables will automatically be used to connect. If these do not exist, it will prompt you to enter your KDB.AI Cloud portal session URL endpoint and API key details."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "n_qqODIvgmSI"
-   },
-   "source": [
-    "### Option 1. KDB.AI Cloud\n",
-    "\n",
-    "Find KDB.AI API Key and Endpoint here: [KDB.AI](https://kdb.ai/)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "id": "TtpzGrEkUEIK"
-   },
-   "outputs": [],
-   "source": [
-    "# Check if KDBAI_ENDPOINT is in the environment variables\n",
-    "if \"KDBAI_ENDPOINT\" in os.environ:\n",
-    "    KDBAI_ENDPOINT = os.environ[\"KDBAI_ENDPOINT\"]\n",
-    "else:\n",
-    "    # Prompt the user to enter the API key\n",
-    "    KDBAI_ENDPOINT = input(\"KDB.AI ENDPOINT: \")\n",
-    "    # Save the API key as an environment variable for the current session\n",
-    "    os.environ[\"KDBAI_ENDPOINT\"] = KDBAI_ENDPOINT\n",
-    "\n",
-    "# Check if KDBAI_ENDPOINT is in the environment variables\n",
-    "if \"KDBAI_API_KEY\" in os.environ:\n",
-    "    KDBAI_API_KEY = os.environ[\"KDBAI_API_KEY\"]\n",
-    "else:\n",
-    "    # Prompt the user to enter the API key\n",
-    "    KDBAI_API_KEY = input(\"KDB.AI KEY: \")\n",
-    "    # Save the API key as an environment variable for the current session\n",
-    "    os.environ[\"KDBAI_API_KEY\"] = KDBAI_API_KEY"
+    "Once the [setup steps](https://code.kx.com/kdbai/gettingStarted/kdb-ai-server-setup.html) are complete you can then connect to your KDB.AI Server session using `kdbai.Session` and passing your local endpoint.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "jT-WnkjYUN4u"
+    "id": "TtpzGrEkUEIK"
    },
    "outputs": [],
    "source": [
-    "#connect to KDB.AI\n",
-    "session = kdbai.Session(api_key=KDBAI_API_KEY, endpoint=KDBAI_ENDPOINT)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "y4NsRw13UY7N"
-   },
-   "source": [
-    "### Option 2. KDB.AI Server\n",
-    "To use KDB.AI Server, you will need download and run your own container. To do this, you will first need to sign up for free here.\n",
+    "#Set up KDB.AI server endpoint \n",
+    "KDBAI_ENDPOINT = (\n",
+    "    os.environ[\"KDBAI_ENDPOINT\"]\n",
+    "    if \"KDBAI_ENDPOINT\" in os.environ\n",
+    "    else \"http://localhost:8082\"\n",
+    ")\n",
     "\n",
-    "You will receive an email with the required license file and bearer token needed to download your instance. Follow instructions in the signup email to get your session up and running.\n",
-    "\n",
-    "Once the setup steps are complete you can then connect to your KDB.AI Server session using kdbai.Session and passing your local endpoint."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "id": "WAZrBnqsUZQp"
-   },
-   "outputs": [],
-   "source": [
-    "### start session with KDB.AI Server\n",
-    "#session = kdbai.Session()"
+    "#connect to KDB.AI Server, default mode is qipc\n",
+    "session = kdbai.Session(endpoint=KDBAI_ENDPOINT)\n"
    ]
   },
   {
