update samples for server

--- a/KDB.AI_course/course_specific_content/managing_tables.ipynb
+++ b/KDB.AI_course/course_specific_content/managing_tables.ipynb
@@ -111,7 +111,17 @@
     "id": "8c660c7d"
    },
    "source": [
-    "## 1. Connect to KDB.AI"
+    "With the embeddings created, we need to store them in a vector database to enable efficient searching.\n",
+    "\n",
+    "### Connect to KDB.AI Server\n",
+    "\n",
+    "To use KDB.AI Server, you will need download and run your own container.\n",
+    "To do this, you will first need to sign up for free [here](https://trykdb.kx.com/kdbaiserver/signup/).\n",
+    "\n",
+    "You will receive an email with the required license file and bearer token needed to download your instance.\n",
+    "Follow instructions in the signup email to get your session up and running.\n",
+    "\n",
+    "Once the [setup steps](https://code.kx.com/kdbai/gettingStarted/kdb-ai-server-setup.html) are complete you can then connect to your KDB.AI Server session using `kdbai.Session` and passing your local endpoint."
    ]
   },
   {
@@ -123,16 +133,16 @@
    },
    "outputs": [],
    "source": [
+    "#Set up KDB.AI server endpoint \n",
     "KDBAI_ENDPOINT = (\n",
     "    os.environ[\"KDBAI_ENDPOINT\"]\n",
     "    if \"KDBAI_ENDPOINT\" in os.environ\n",
-    "    else input(\"KDB.AI endpoint: \")\n",
+    "    else \"http://localhost:8082\"\n",
     ")\n",
-    "KDBAI_API_KEY = (\n",
-    "    os.environ[\"KDBAI_API_KEY\"]\n",
-    "    if \"KDBAI_API_KEY\" in os.environ\n",
-    "    else getpass(\"KDB.AI API key: \")\n",
-    ")"
+    "\n",
+    "\n",
+    "#connect to KDB.AI Server, default mode is qipc\n",
+    "session = kdbai.Session(endpoint=KDBAI_ENDPOINT)"
    ]
   },
   {
@@ -144,7 +154,6 @@
    },
    "outputs": [],
    "source": [
-    "session = kdbai.Session(api_key=KDBAI_API_KEY, endpoint=KDBAI_ENDPOINT)\n",
     "database = session.database(\"default\")"
    ]
   },
