--- a/KDB.AI_course/course_specific_content/rag_example.ipynb
+++ b/KDB.AI_course/course_specific_content/rag_example.ipynb
@@ -79,17 +79,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set up OpenAI API key\n",
+    "OPENAI_API_KEY = (\n",
+    "    os.environ[\"OPENAI_API_KEY\"]\n",
+    "    if \"OPENAI_API_KEY\" in os.environ\n",
+    "    else getpass(\"OpenAI API key: \")\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "0aC8tMVy0vPv"
    },
    "source": [
-    "##### Connect to KDB.AI"
+    "With the embeddings created, we need to store them in a vector database to enable efficient searching.\n",
+    "\n",
+    "### Connect to KDB.AI Server\n",
+    "\n",
+    "To use KDB.AI Server, you will need download and run your own container.\n",
+    "To do this, you will first need to sign up for free [here](https://trykdb.kx.com/kdbaiserver/signup/).\n",
+    "\n",
+    "You will receive an email with the required license file and bearer token needed to download your instance.\n",
+    "Follow instructions in the signup email to get your session up and running.\n",
+    "\n",
+    "Once the [setup steps](https://code.kx.com/kdbai/gettingStarted/kdb-ai-server-setup.html) are complete you can then connect to your KDB.AI Server session using `kdbai.Session` and passing your local endpoint."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -99,23 +123,18 @@
    },
    "outputs": [],
    "source": [
-    "# Set up OpenAI API key\n",
-    "OPENAI_API_KEY = (\n",
-    "    os.environ[\"OPENAI_API_KEY\"]\n",
-    "    if \"OPENAI_API_KEY\" in os.environ\n",
-    "    else getpass(\"OpenAI API key: \")\n",
-    ")\n",
     "\n",
+    "\n",
+    "#Set up KDB.AI server endpoint \n",
     "KDBAI_ENDPOINT = (\n",
     "    os.environ[\"KDBAI_ENDPOINT\"]\n",
     "    if \"KDBAI_ENDPOINT\" in os.environ\n",
-    "    else input(\"KDB.AI endpoint: \")\n",
+    "    else \"http://localhost:8082\"\n",
     ")\n",
-    "KDBAI_API_KEY = (\n",
-    "    os.environ[\"KDBAI_API_KEY\"]\n",
-    "    if \"KDBAI_API_KEY\" in os.environ\n",
-    "    else getpass(\"KDB.AI API key: \")\n",
-    ")"
+    "\n",
+    "\n",
+    "#connect to KDB.AI Server, default mode is qipc\n",
+    "session = kdbai.Session(endpoint=KDBAI_ENDPOINT)"
    ]
   },
   {
@@ -129,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -138,22 +157,7 @@
     "id": "cemGdbEkufnu",
     "outputId": "4de02d2c-338e-4034-e784-c26a6abb8550"
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cb0403a1643a496b8c3dbe5dc7a3c53e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Fetching 9 files:   0%|          | 0/9 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fastembed = TextEmbedding()"
    ]
@@ -219,7 +223,6 @@
    "outputs": [],
    "source": [
     "KDBAI_TABLE_NAME = \"paul_graham\"\n",
-    "session = kdbai.Session(endpoint=KDBAI_ENDPOINT, api_key=KDBAI_API_KEY)\n",
     "database = session.database(\"default\")\n",
     "\n",
     "# Drop existing table if it exists\n",
