--- a/KDB.AI_course/course_specific_content/rag_example.ipynb
+++ b/KDB.AI_course/course_specific_content/rag_example.ipynb
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "id": "fhGl5YDXaXak"
    },
@@ -574,7 +574,7 @@
     "            messages += data.decode('utf-8') + \"\\n\"\n",
     "    openai.api_key = os.environ[\"OPENAI_API_KEY\"]\n",
     "    response = openai.chat.completions.create(\n",
-    "        model=\"gpt-4-turbo-preview\",\n",
+    "        model=\"gpt-4o\",\n",
     "        messages=[\n",
     "            {\n",
     "            \"role\": \"user\",\n",
