--- a/document_search/document_search.ipynb
+++ b/document_search/document_search.ipynb
@@ -147,7 +147,8 @@
     "import pypdf\n",
     "import nltk\n",
     "from nltk.tokenize import sent_tokenize\n",
-    "nltk.download('punkt')"
+    "nltk.download('punkt')\n",
+    "nltk.download('punkt_tab')"
    ]
   },
   {
