--- a/quickstarts/python_quickstart.ipynb
+++ b/quickstarts/python_quickstart.ipynb
@@ -71,7 +71,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install kdbai_client fastembed onnxruntime"
+    "!pip install kdbai_client fastembed onnxruntime 'tf_keras>=2.18.0'"
    ]
   },
   {
